--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "homepage": "https://github.com/sakibthecoder/wordexplorer",
+  "homepage": "https://github.com/sakib00900/mywordexplorer",
   "name": "vite-project",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d build",
+      "predeploy": "npm run build",
+      "deploy": "gh-pages -d build",
+      "start": "react-scripts start",
+      "build": "react-scripts build",
     "dev": "vite",
-    "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
